--- a/public/views/pages/error.ejs
+++ b/public/views/pages/error.ejs
@@ -27,7 +27,7 @@
     </div>
     <div class="error-notification">
         <h4>
-        Sorry, we couldn't find what you are looking for! Please choose from below.
+        Sorry, we couldn't find what you are looking for! Please choose from the categories.
     </h4>
     </div>
     <%
