--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -18,7 +18,7 @@
             <% if(!isLogin) { %>
                 <button type="submit" name="signIn" id="sign_in" formaction="/userProfile/myItems">Sign In</button>
                 <%  } else { %>
-                <button name="signIn" id="sign_in" formaction="/userProfile/myProfile">Welcome!</button>
+                <button type="submit" name="signIn" id="sign_in" formaction="/userProfile/myItems">Welcome!</button>
             <% } %>
         </div>
         </form>
