--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -123,6 +123,20 @@ h1, h2, h3 {
   padding: 5px 25px;
 }
 
+#recipe-title-feedback h5 ul {
+  text-decoration: none;
+  list-style: none;
+  /*display: inline;*/
+  float: right;
+  padding-right: 275px;
+}
+
+#recipe-title-feedback h5 ul li {
+  text-decoration: none;
+  list-style: none;
+  display: inline;
+}
+
 .user_nav ul {
   list-style: none;
   margin: 0;
@@ -686,8 +700,9 @@ h5 {
 
 .form-input {
   display: block;
-  margin: 10px 0 0 0;
-  height: 30px;
+  margin:10px 0 10px 0;
+  width: 95%;
+  height: 40px;
   line-height: 40px;
   padding: 0 5px 0 5px;
 }
@@ -729,4 +744,47 @@ h5 {
   color: white;
   cursor: pointer;
   font-family: Helvetica;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#comment-box {
+  width: 100%;
 }
