--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -15,16 +15,16 @@
     </div>
     <div class="social-media-section">
         <ul>
-            <li><a class="facebook" href="#"><i class="fa fa-facebook fa-4x"></i></a></li>
-            <li><a class="twitter" href="#"><i class="fa fa-twitter fa-4x"></i></a></li>
-            <li><a class="pinterest" href="#"><i class="fa fa-pinterest fa-4x"></i></a></li>
-            <li><a class="instagram" href="#"><i class="fa fa-instagram fa-4x"></i></a></li>
+            <li><a href="https://www.facebook.com/arjunkalidasm" class="facebook"><i class="fa fa-facebook fa-4x"></i></a></li>
+            <li><a href="https://twitter.com/ArjunKalidas" class="twitter"><i class="fa fa-twitter fa-4x"></i></a></li>
+            <li><a href="https://in.pinterest.com/arjunkalidas/" class="pinterest"><i class="fa fa-pinterest fa-4x"></i></a></li>
+            <li><a href="https://www.instagram.com/arjunkalidas/" class="instagram"><i class="fa fa-instagram fa-4x"></i></a></li>
         </ul>
     </div>
 </div>
 <hr>
 <div id="copyright-div">
-    <p><a href="https://fontawesome.com/license">Icons: CC BY 4.0 License </a> (https://creativecommons.org/licenses/by/4.0/)</p>
+    <p><a href="https://fontawesome.com/license">Icons: Creative Commons 4.0 License </a></p>
     <p class="copyright-text">Copyright &copy; 2019 All Rights Reserved by <a href="#">KooKING</a>.
     </p>
 </div>
