Routes EJS, and MVC - Database Integration There weren’t any errors in my HTML5 prototype. So proceeded with creating of JavaScript Objects to implement the business layer of the application. And used EJS template pages to present the view to the browser. I implemented fetching data from database for Categories, Item, User Profile, Feedback and login page Converted all the HTML5 pages to EJS templates All the pages were checked for HTML5 validation requirement before proceeding Added modal window for sign in Improved overall animation A database using mongoDB was created File path to access the assets were kept relative and not specific to my machine I have ProfileController to deal with the user items and personal profile The application flow as per the pseudo code was implemented, with additional validations and checks as deemed necessary.
Credentials to use:
Username: user01 Password: niner49
Username: user02 Password: niner49

--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -15,10 +15,10 @@
     </div>
     <div class="social-media-section">
         <ul>
-            <li><a href="https://www.facebook.com/arjunkalidasm" class="facebook"><i class="fa fa-facebook fa-4x"></i></a></li>
-            <li><a href="https://twitter.com/ArjunKalidas" class="twitter"><i class="fa fa-twitter fa-4x"></i></a></li>
-            <li><a href="https://in.pinterest.com/arjunkalidas/" class="pinterest"><i class="fa fa-pinterest fa-4x"></i></a></li>
-            <li><a href="https://www.instagram.com/arjunkalidas/" class="instagram"><i class="fa fa-instagram fa-4x"></i></a></li>
+            <li><a href="https://www.facebook.com/arjunkalidasm" class="facebook" href="#"><i class="fa fa-facebook fa-4x"></i></a></li>
+            <li><a href="https://twitter.com/ArjunKalidas" class="twitter" href="#"><i class="fa fa-twitter fa-4x"></i></a></li>
+            <li><a href="https://in.pinterest.com/arjunkalidas/" class="pinterest" href="#"><i class="fa fa-pinterest fa-4x"></i></a></li>
+            <li><a href="https://www.instagram.com/arjunkalidas/" class="instagram" href="#"><i class="fa fa-instagram fa-4x"></i></a></li>
         </ul>
     </div>
 </div>
