--- a/public/views/pages/item.ejs
+++ b/public/views/pages/item.ejs
@@ -23,7 +23,7 @@
         <ul class="breadcrumb">
             <li><a href="/index">Home</a></li>
             <li><a href="/categories">Categories</a></li>
-            <li><a href="#">Item</a></li>
+            <li><a href="#">ItemModel</a></li>
         </ul>
     </div>
     <div class="card-row home-card">
